<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">定位sdk Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>
    
    
    
    <string name="list_container_title">维修店</string>
    <string name="current_addr">当前地址是：</string>
    
    
    <string name="credit_prompt">信誉等级</string>
    <string-array name="creditOptions"> 
        <item>信誉等级</item> 
        <item>AAA</item> 
        <item>AA</item> 
        <item>A</item>        
    </string-array> 
    
    <string name="carMark_prompt">汽车品牌</string>
    <string-array name="car_marks">
        <item>汽车品牌</item> 
        <item>上海大众</item> 
        <item>标志</item> 
        <item>MG</item> 
        <item>依维柯</item>
        <item>雷克萨斯</item>
        <item>福特</item>
    </string-array> 
    
    
    
    <string name="is4s_prompt">是否4S店</string>
    <string-array name="is4sOptions"> 
        <item>是否4S店</item>
        <item>是</item> 
    </string-array> 
    
    
    
    <string name="carstore_list_item_grade">资质类别：</string>
    <string name="carstore_list_item_4s">4S店：</string>
    <string name="carstore_list_item_type">主修车型：</string>

</resources>